<resources>
    <string name="app_name">Reminder</string>
    <string name="action_settings">Settings</string>
    <string name="message_hint">Enter message…</string>
    <string name="at_time">At time</string>
    <string name="repeats">Repeats</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="pick_date">Pick a date…</string>
    <string name="pick_time">Pick a time…</string>
    <string name="done">Done</string>
    <string name="create_activity_label">Create reminder</string>
    <string name="every">Every</string>
    <string-array name="frequency">
        <item>minutes</item>
        <item>hours</item>
        <item>days</item>
    </string-array>
    <string name="notification_channel_name">Reminder notification</string>
    <string name="notification_channel_description">For sending a notification for a reminder item.</string>
</resources>
